load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_test", "nogo")

nogo(
    name = "foo_nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

go_binary(
    name = "foo",
    srcs = ["foo.go"],
)

go_test(
    name = "foo_test",
    srcs = ["foo_test.go"],
)
